2007-02-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	* test/gtkrcs/clearlooks-inverted:
	- Add clearlooks inverted style to the tests.

2007-02-17  Benjamin Berg  <benjamin@sipsolutions.net>

	Patch from Andrea Cimitan <andrea.cimitan@gmail.com>:

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_slider),
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider), (clearlooks_draw_radiobutton),
	(clearlooks_draw_checkbox):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button),
	(clearlooks_inverted_draw_slider),
	(clearlooks_inverted_draw_list_view_header),
	(clearlooks_inverted_draw_scrollbar_stepper),
	(clearlooks_inverted_draw_scrollbar_slider),
	(clearlooks_inverted_draw_selected_cell):

	- Color, shading and style changes
	- Removal of some comments and other small changes
	- Use text[NORMAL] for ACTIVE checkmarks. (Fixes Bug #407440)

2007-02-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	* test/exported:
	* test/torture:
	- Skip toreture tests if buildin fails (eg. no X server or crashes
	in GTK+)
	- Minor changes

2007-02-13  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Updated for 2.9.3

2007-02-13  Thomas Wood  <thos@gnome.org>

	Based on patch by: Andrea Cimitan <andrea.cimitan@gmail.com>

	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:

	- Changes to checkbox style (use cross rather than tick mark)
	- Use text[] colour for radio and check marks
	- Improve arrows style (more similar to original Clearlooks)