@@ -1,8 +1,8 @@
 {
-   <insert a suppression name here>
+   Some invalid access on application startup
    Memcheck:Param
    writev(vector[...])
-   fun:do_writev
+   fun:*writev
    obj:/usr/lib/libX11.so.6.2.0
    fun:_X11TransWritev
    fun:_XSend
@@ -11,29 +11,21 @@
    fun:XFixesFindDisplay
    fun:XFixesQueryExtension
    fun:gdk_display_open
-   fun:gdk_display_open_default_libgtk_only
-   fun:gtk_init_check
-   fun:gtk_init
 }
 {
-   <insert a suppression name here>
+   something else, dunno what exactly
    Memcheck:Param
    write(buf)
-   fun:write
+   fun:*write*
    fun:_X11TransWrite
    obj:/usr/lib/libX11.so.6.2.0
    fun:_XEventsQueued
    fun:XPending
    fun:_gdk_events_queue
    fun:gdk_event_dispatch
-   fun:g_main_context_dispatch
-   fun:g_main_context_iterate
-   fun:g_main_context_iteration
-   fun:gtk_main_iteration_do
-   fun:main
 }
 {
-   <insert a suppression name here>
+   Some home directory stuff, happens when loading the engine
    Memcheck:Leak
    fun:malloc
    fun:nss_parse_service_list
@@ -45,25 +37,9 @@
    fun:g_get_home_dir
 }
 {
-   <insert a suppression name here>
+   pango/fc leak
    Memcheck:Leak
-   fun:malloc
-   fun:FcPatternObjectAddWithBinding
-   fun:FcPatternObjectAdd
-   fun:FcFontRenderPrepare
-   fun:pango_fc_font_map_load_fontset
-   fun:pango_font_map_load_fontset
-   fun:itemize_state_process_run
-   fun:pango_itemize_with_base_dir
-   fun:pango_layout_check_lines
-   fun:pango_layout_get_extents_internal
-   fun:gtk_label_size_request
-   fun:g_cclosure_marshal_VOID__BOXED
-}
-{
-   <insert a suppression name here>
-   Memcheck:Leak
-   fun:realloc
+   fun:*alloc
    fun:FcPatternObjectInsertElt
    fun:FcPatternObjectAddWithBinding
    fun:FcPatternObjectAdd
