@@ -1,3 +1,12 @@
+2007-02-19  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* test/Makefile.am:
+	* test/valgrind-suppressions:
+	- Change valgrind options
+	- Set some enviroment variables for glib to make it more valgrind
+	friendly
+	- some modifications to the suppressions file
+
 2007-02-18  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* test/Makefile.am:
